--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -3,7 +3,7 @@ footer {
     height: 60px;
     line-height: 60px;
     width: 100%;
-    position: relative;
+    position: absolute;
     bottom: 0px;
     text-align: center;
     border-top: solid 1px #cccccc;
