--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -3,7 +3,7 @@ header {
     width: 100%;
     border-bottom: solid 1px #cccccc;
     background-color: white;
-    background-image: url("logo.png");
+    background-image: url("../images/logo.png");
     background-repeat: no-repeat;
     background-position: 20px 50%;
 }
