--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,17 +1,19 @@
 html {
-    position:relative;
-    min-height:100%;
+        position:relative;
+        min-height:100%;
 }
-
 body {
-    margin: 0;
-    padding: 0;
-    color: #484848;
-    font-size: 14px;
-    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+        margin: 0;
+	padding-bottom: 60px;
+        color: #484848;
+        height: 100%;
+        font-size: 14px;
+        font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
-
 div.container {
-    max-width: 1000px;
-    margin: 30px auto;
+	max-width: 1000px;
+	margin-top:30px;
+        margin-bottom:30px;
+        padding:10px;
+	margin: 30px auto;
 }
