--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,77 +1,82 @@
-div.container {
-    max-width: 1000px;
-    margin: 30px auto;
-}
-
 div.container section.filters {
-    height: 70px;
-    background-color: #FFFFFF;
-    border: 1px solid #DDDDDD;
-    width: 100%;
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    align-items: stretch;
+	height: 70px;
+	background-color: #FFFFFF;
+	border: 1px solid #DDDDDD;
+	width: 100%;
+	z-index: 1;
+	position: relative;
+	display: flex;
+	flex-direction: row;
+	align-items: stretch;
 }
 
 div.container section.filters button {
-    font-size: 18px;
-    background-color: #FF5A5F;
-    color: white;
-    height: 48px;
-    width: 20%;
-    border-radius: 4px;
-    position: relative;
-    margin: auto 30px auto auto;
-    border: none;
+	font-size: 18px;
+	background-color: #FF5A5F;
+	color: white;
+	height: 48px;
+	width: 20%;
+	border-radius: 4px;
+	position: relative;
+	margin: auto 30px auto auto;
+	border: none;
 }
 
 div.container section.filters button:hover{
-    opacity: 0.9;
+ 	opacity: 0.9;
 }
 
 .locations, .amenities {
-    height: 100%;
-    width: 25%;
-    float: left;
-    align-content: center;
-    text-align: center;
-    line-height: 30px
+  height: 100%;
+  width: 25%;
+  float: left;
+  align-content: center;
+  text-align: center;
+  line-height: 30px
 }
 
 .locations{
-    border-right: 1px solid #DDDDDD;
+  border-right: 1px solid #DDDDDD;
 }
 
-.locations:hover .popover{
-    display: block;
+.locations h4, .amenities h4 {
+    font-weight: 400;
+    font-size: 14px;
+    margin: -5px 0px 15px 0px;
 }
+
+.locations h3, .amenities h3 {
+  font-weight: 600;
+  margin: 0px auto;
+}
+
 ul {
-    list-style:none;
+  list-style:none;
 }
 
 .popover {
-    margin-top: 0px;
-    background-color: #FAFAFA;
-    position: relative;
-    border: 1px solid #DDDDDD;
-    display:none;
-    padding-bottom: 4%;
-    text-align: left;
+  margin-top: 0px;
+  background-color: #FAFAFA;
+  position: relative;
+  border: 1px solid #DDDDDD;
+  display:none;
+  padding-bottom: 4%;
+  text-align: left;
 }
 
 .locations:hover .popover{
-    display: block;
+  display: block;
 }
+
 .amenities:hover .popover{
-    display: block;
+  display: block;
 }
 
 .popover h2 {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .popover ul {
-    padding-bottom: 4%;
+  padding-bottom: 4%;
 }
